discussion/kv_engine/173486/173486_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51681: Add tests for MemOverhead{,Queue,Index}

Expand on testCheckpointManagerMemUsage to test the
base case of a single checkpoint's memory
calculations.

Add a test to validate that the CheckpointManager's
getMemOverhead(), getMemOverheadIndex(), and
getMemOverheadQueue() are calculated correctly as
the sum of all Checkpoints managed by the CM.

Change-Id: I76c920a2dbc99fea1fbe6917dde8450f06f6a62e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-11 09:31:18.000000000
Message: 
Patch Set 2: Patch Set 1 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-11 09:45:40.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45202/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\checkpoint_test.cc(3375): error C2660: "CheckpointManager::createNewCheckpoint": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45202/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16605/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3375:33: error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
    manager.createNewCheckpoint(true /*force*/);
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:401:5: note: "createNewCheckpoint" declared here
    uint64_t createNewCheckpoint();
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16605/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3375:33:
error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16605/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6318/ : FAILURE

Compile error at [2022-04-11T09:39:20.862Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3375:47:
error: no matching function for call to ?MockCheckpointManager::createNewCheckpoint(bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6256/ : FAILURE

Compile error at [2022-04-11T09:37:18.046Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3375:33:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6256/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18378/ : FAILURE

Compile error at [2022-04-11T09:43:31.896Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3375:47:
error: no matching function for call to ?MockCheckpointManager::createNewCheckpoint(bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18378/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18715/ : FAILURE

Compile error at [2022-04-11T09:43:28.838Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3375:47:
error: no matching function for call to ?MockCheckpointManager::createNewCheckpoint(bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18715/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19410/ : FAILURE

Compile error at [2022-04-11T09:43:13.580Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3375:33:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19410/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17475/ : FAILURE

Compile error at [2022-04-11T09:37:10.448Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3375:33:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17475/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26785/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37966/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15534/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
